--- a/res/layout/activity_location.xml
+++ b/res/layout/activity_location.xml
@@ -7,6 +7,6 @@
         android:id="@+id/map"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        class="com.google.android.gms.maps.SupportMapFragment" />
+        class="com.zen.patrolace.ui.MapFragment" />
 
 </LinearLayout>
